# xian-contracting-hub-web

./: .coverage  .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  pyproject.toml  rxconfig.py
.ralph/: config.json
assets/: accessibility.css
contracting_hub/: __init__.py  app.py  config.py  contracting_hub.py  database.py  theme.py
contracting_hub/admin/: __init__.py  catalog_operations.py  contract_editor.py  contract_relations.py  contract_versions.py  contracts_index.py
contracting_hub/components/: __init__.py  app_shell.py  contract_catalog.py  contract_code_viewer.py  contract_detail.py  contract_lint_results_panel.py  contract_related_contracts.py  contract_version_diff_viewer.py  contract_version_history.py  page_section.py  page_states.py
contracting_hub/integrations/: __init__.py  playground.py  storage.py  xian_linter.py
contracting_hub/models/: __init__.py  base.py  schema.py
contracting_hub/pages/: __init__.py  browse.py  contract_detail.py  deployment_history.py  developer_leaderboard.py  developer_profile.py  home.py  login.py  profile_settings.py  register.py
contracting_hub/repositories/: __init__.py  auth.py  contract_versions.py  contracts.py  deployments.py  developer_kpis.py  playground_targets.py  ratings.py  stars.py
contracting_hub/services/: __init__.py  admin_catalog_operations.py  admin_contract_editor.py  admin_contract_relations.py  admin_contract_versions.py  admin_contracts.py  auth.py  bootstrap.py  contract_browse.py  contract_detail.py  contract_diffs.py  contract_linting.py  contract_metadata.py  contract_search.py  contract_versions.py  deployment_history.py  deployments.py  developer_kpis.py  developer_leaderboard.py  developer_profiles.py  homepage.py  local_reset.py  playground_targets.py  profile_settings.py  profiles.py  ratings.py  stars.py  uploads.py
contracting_hub/states/: __init__.py  admin_catalog_operations.py  admin_contract_editor.py  admin_contract_relations.py  admin_contract_versions.py  admin_contracts.py  auth.py  browse.py  contract_detail.py  deployment_history.py  developer_leaderboard.py  developer_profile.py  profile_settings.py
contracting_hub/utils/: __init__.py  contract_catalog.py  meta.py
migrations/: env.py
migrations/versions/: 4f6e1e8d4c2b_add_auth_sessions.py  9db45bd4585d_initial_schema.py  d0f4c4b9a972_add_contract_search_index.py
scripts/: reset_local_dev.sh  seed_demo_data.sh
specs/: features.md  overview.md  playground_integration.md
tests/: README.md  conftest.py
tests/e2e/: conftest.py  test_admin_workspace_playwright.py  (+8 more)
(+96 files in other folders)
